--- a/Pure Mathematics.tex
+++ b/Pure Mathematics.tex
@@ -4,6 +4,7 @@
 \date{\vspace{-6ex}}
 
 \begin{document}
+	\sloppy
 	\maketitle
 	
 	\subfile{"Number Theory"}
@@ -23,4 +24,6 @@
 	\subfile{"Linear Transformations"}
 	
 	\subfile{"Analysis"}
+	\newpage
+	\subfile{"Differentiation"}
 \end{document}
