--- a/search.tex
+++ b/search.tex
@@ -50,7 +50,7 @@
 }
 \newcommand{\searchableSubsection}[3]{
 	\searchResult{#2}{
-		\subsection{#1}\tags{#2}
+		\subsection{\subsectionTitle{#1}}\tags{#2}
 			{#3}
 	}
 }
