--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -148,6 +148,7 @@
 }
 \def\theoremautorefname{Theorem}
 \def\corollaryautorefname{Corollary}
+\def\lemmaautorefname{Lemma}
 
 \def\exautorefname{Example}
 
