--- a/Pure Mathematics.tex
+++ b/Pure Mathematics.tex
@@ -24,6 +24,12 @@
 	\subfile{"Linear Transformations"}
 	
 	\subfile{"Analysis"}
+	
+	\newpage
+	\chapter{Calculus}
+	\subfile{"The Number e"}
 	\newpage
 	\subfile{"Differentiation"}
+	\newpage
+	\subfile{"Difference Equations and Differential Equations"}
 \end{document}
